# neleus-db

./: .gitignore  AGENTS.md  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  INTEGRATION.md  Jenkinsfile  LICENSE  README.md  build.rs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
benches/: compare_sql.rs  scale.rs  state.rs  storage.rs
console/: index.html  package-lock.json  package.json
console/src/: App.css  App.tsx  index.css  links.ts
console/src/components/: AuditLog.tsx  Inspector.tsx  Monitor.tsx  Overview.tsx  Policies.tsx  Reports.tsx  Violations.tsx  icons.tsx  ui.tsx
console/src/lib/: api.ts  markdown.tsx
docs/: README.md  cli.md  compliance.md  concepts.md  getting-started.md  http-api.md  policy.md  regulatory-mapping.md  security.md
docs/design/: retention-and-erasure.md
examples/: 01_basic_blob_storage.rs  02_state_and_commits.rs  03_document_chunking.rs  04_provenance_tracking.rs  05_state_proofs.rs  06_claude_run.py  README.md
sdk/python/: neleus.py
sdk/python-native/: .gitignore  Cargo.toml  README.md  build.sh  pyproject.toml  test_native.py
sdk/python-native/.cargo/: config.toml
sdk/python-native/src/: lib.rs
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: http.rs  lib.rs
sdk/rust/tests/: integration.rs
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts
sdk/typescript/test/: client.test.ts
src/: alert.rs  atomic.rs  audit.rs  auth.rs  blob_store.rs  canonical.rs  cas.rs  checkpoint.rs  clock.rs  commit.rs  compliance.rs  compression.rs  db.rs  encryption.rs  erasure.rs  events.rs  gc.rs  hash.rs  lib.rs  lock.rs  main.rs  manifest.rs  merkle.rs  object_store.rs  pack.rs  packstore.rs  par.rs  policy.rs  provenance.rs  refs.rs  retrieval_proof.rs  server.rs  session.rs  signing.rs  state.rs  sync.rs  wal.rs
src/engine/: mod.rs  segment.rs  vector.rs  writer.rs
src/index/: mod.rs
tests/: cli.rs  multiprocess_contention.rs  policy_enforcement.rs
