[package]
name = "neleus-db"
version = "0.1.1"
edition = "2024"
description = "Local-first Merkle-DAG database for AI agents with cryptographic proofs and immutable versioning"
license = "MIT"
repository = "https://github.com/auralshin/neleus-db"
homepage = "https://github.com/auralshin/neleus-db"
documentation = "https://docs.rs/neleus-db"
readme = "README.md"
keywords = ["database", "merkle", "ai-agents", "content-addressed", "versioning"]
categories = ["database-implementations", "cryptography", "data-structures"]

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
base64 = "0.22"
blake3 = "1.5"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
getrandom = "0.2"
hex = "0.4"
hkdf = "0.12"
libc = "0.2"
pbkdf2 = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_ipld_dagcbor = "0.6"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
zstd = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
rand = "0.8"
tempfile = "3.16"

[[bin]]
name = "neleus-db"
path = "src/main.rs"

[[bench]]
name = "storage"
harness = false

[[bench]]
name = "state"
harness = false

# Crypto/hash/compression deps dominate test and bench runtime. Compiling them
# at opt-level=3 while leaving this crate at opt-level=0 keeps incremental
# builds fast and shrinks the test suite wall time dramatically — measured ~6×
# on the state proptests. Cached after the first build.
[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3
